tests/type/errors/bad_primitive1.typedsol
2:5 error: Mismatched types for assignment